--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,10 +70,11 @@
 
 /* my skills */
 
-.skill-title{
-text-align: center;
-margin: 72px 0;
+.skill-title {
+  text-align: center;
+  margin: 72px 0;
 }
+
 .skills {
   margin: 0 188px;
   display: flex;
@@ -86,4 +87,40 @@ margin: 72px 0;
 
 .skill-items h3 {
   padding: 8px 0;
+}
+
+
+.watch {
+  text-align: center;
+  padding: 144px;
+  background-image: linear-gradient();
+}
+
+#bg_2 {
+  background-image:
+    linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),
+    url('/images/watch.png');
+  width: 80%;
+  height: 300px;
+  background-size: cover;
+  color: white;
+  padding: 48px;
+  margin: 188px auto;
+  border-radius: 8px;
+}
+
+.always-keep {
+  position: relative;
+  text-align: left;
+  padding: 100px 0 12px 0;
+}
+
+.btn-primary-2 {
+  color: #005FAC;
+  background-color: rgb(255, 255, 255);
+  border: 0;
+  padding: 12px 18px;
+  font-weight: 700;
+  margin: 8px 0;
+  border-radius: 4px;
 }
