--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,7 @@
   font-weight: 700;
   margin: 8px 0;
   border-radius: 4px;
+  font-size: 12pt;
 }
 
 /* failures styles */
@@ -96,6 +97,9 @@
   background-image: linear-gradient();
 }
 
+
+/* bg2 */
+
 #bg_2 {
   background-image:
     linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),
@@ -123,4 +127,59 @@
   font-weight: 700;
   margin: 8px 0;
   border-radius: 4px;
+  font-size: 12pt;
+}
+
+
+/* footer */
+.footer-bg {
+  background-color: black;
+
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 188px;
+  padding: 144px 0;
+  color: aliceblue;
+}
+
+.footer-title {
+  text-align: left;
+}
+
+.sub {
+  padding: 6px 0;
+}
+
+.email {
+  margin: 12px 0;
+  padding: 12px 0;
+  background-color: black;
+  border: 1px solid white;
+  border-radius: 4px;
+
+}
+
+.btn-primary-3 {
+  color: #ffffff;
+  background-color: #005FAC;
+  border: 0;
+  padding: 12px 18px;
+  font-weight: 700;
+  margin: 8px 0;
+  border-radius: 4px;
+  font-size: 12pt;
+}
+
+.icons {
+  display: flex;
+  justify-content: left;
+  padding: 24px 0;
+}
+
+.icons li {
+  padding-right: 18px;
+  list-style-type: none;
 }
