--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,7 +104,7 @@
 #bg_2 {
   background-image:
     linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),
-    url("./images/watch.png");
+    url("file:///C:/projectsss/Asssignment-01/images/watch.png");
   width: 80%;
   height: 300px;
   background-size: cover;
